# spider-core

./: Cargo.toml  README.md
src/: builder.rs  checkpoint.rs  concurrency.rs  item.rs  lib.rs  pipeline.rs  prelude.rs  scheduler.rs  spider.rs  state.rs  stats.rs
src/crawler/: core.rs  item_processor.rs  middleware_manager.rs  mod.rs  request_handler.rs  response_parser.rs
