[package]
name = "spider-core"
version = "0.2.2"
edition = "2024"
authors = ["mzyui <mzyui@proton.me>"]
description = "Core functionality for the spider-lib web scraping framework."
homepage = "https://github.com/spider-lib/spider-core"
repository = "https://github.com/spider-lib/spider-core"
license = "MIT"
readme = "README.md"
keywords = ["web-scraping", "crawler", "scraper", "async", "rust"]
categories = ["web-programming", "development-tools", "parsing"]

[dependencies]
parking_lot = "0.12"
anyhow = "1.0"
async-trait = "0.1"
cookie_store = { version = "0.20", optional = true }
crossbeam = "0.8"
dashmap = { version = "6.1.0", features = ["serde"] }
futures-util = "0.3"
kanal = "0.1.1"
moka = { version = "0.12", features = ["future", "sync"] }
num_cpus = "1.16"
rmp-serde = { version = "1.3.1", optional = true }
time = { version = "0.3", features = ["serde"], optional = true }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
url = { version = "2.5.8", features = ["serde"] }

spider-macro = { version = "0.1.5", path = "../spider-macro" }
spider-util = { version = "0.1.7", path = "../spider-util" }
spider-middleware = { version = "0.1.7", path = "../spider-middleware" }
spider-pipeline = { version = "0.1.7", path = "../spider-pipeline" }
spider-downloader = { version = "0.2.0", path = "../spider-downloader" }

[features]
default = ["core"]
core = []
checkpoint = ["dep:rmp-serde", "dep:time"]
cookie-store = ["dep:cookie_store"]
